Run OOM with 7 Kubernetes host VMs
Bump helm to 2.8.2.
Bump kubectl to 1.8.10.
Remove obsolete HEAT parameters.

Change-Id: Ifb644cc354b8dc4dc8a8c39023b2016eaf84c7da
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/gwu/onap.env
+++ b/deployment/heat/onap-oom/env/gwu/onap.env
@@ -1,33 +1,16 @@
 parameters:
 
-  keystone_url: http://192.168.1.11:5000
-  openstack_tenant_id: 4c93f99551604bf7af25a8f80c7f34cb
-  openstack_tenant_name: onap
-  openstack_username: demo
-  openstack_api_key: demo
-
   ubuntu_1404_image: trusty
   ubuntu_1604_image: xenial
-  centos_7_image: centos7
 
+  lab_name: gwu
   apt_proxy: 192.168.1.51:3142
   docker_proxy: 192.168.1.51:5000
 
-  rancher_vm_flavor: m1.large
-  k8s_vm_flavor: m2.xxlarge
+  rancher_vm_flavor: m1.xlarge
+  k8s_vm_flavor: m1.xlarge
 
   public_net_id: 024582bd-ef9b-48b9-9e70-e6732559d9df
   public_net_name: provider
 
   oam_network_cidr: 172.16.0.0/16
-  dns_forwarder: 192.168.1.11
-  external_dns: 192.168.1.3
-
-  dnsaas_proxy_enable: "false"
-  dnsaas_proxied_keystone_url_path: "v2.0"
-  dnsaas_keystone_url: http://192.168.1.11:5000
-  dnsaas_region: RegionOne
-  dnsaas_tenant_id: 4c93f99551604bf7af25a8f80c7f34cb
-  dnsaas_tenant_name: onap
-  dnsaas_username: demo
-  dnsaas_password: demo
