--- a/deployment/heat/onap-oom/env/tlab/ETE-HEAT-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-HEAT-Test.env
@@ -1,34 +1,16 @@
 parameters:
 
-  keystone_url: https://bdc1tlab01.research.att.com:5000
-  openstack_tenant_id: 76b1938dd3b9471fa1ed413a1b212a96
-  openstack_tenant_name: ETE-HEAT-Test
-  openstack_username: ${OS_USERNAME}
-  openstack_api_key: ${OS_PASSWORD}
-
   ubuntu_1404_image: "Ubuntu 14.04 LTS Generic"
   ubuntu_1604_image: "Ubuntu 16.04 LTS Generic"
-  centos_7_image: "centos7"
 
   lab_name: tlab
   apt_proxy: 192.168.31.204:3142
   docker_proxy: 192.168.31.204:5000
 
-  rancher_vm_flavor: m2.large
-  k8s_vm_flavor: m5.xxlarge
+  rancher_vm_flavor: m1.xlarge
+  k8s_vm_flavor: m1.xlarge
 
   public_net_id: fbe8fd92-6636-4e63-ab28-bb6a5b0888a9
   public_net_name: admin-vpn-floating
 
   oam_network_cidr: 10.0.0.0/16
-  dns_forwarder: 204.178.3.230
-  external_dns: 8.8.8.8
-
-  dnsaas_proxy_enable: "false"
-  dnsaas_proxied_keystone_url_path: "v3"
-  dnsaas_keystone_url: https://bdc1tlab01.research.att.com:5000
-  dnsaas_region: RegionOne
-  dnsaas_tenant_id: 76b1938dd3b9471fa1ed413a1b212a96
-  dnsaas_tenant_name: ETE-HEAT-Test
-  dnsaas_username: ${OS_USERNAME}
-  dnsaas_password: ${OS_PASSWORD}
