--- a/deployment/heat/onap-oom/env/huawei/onap-beijing-oom.env
+++ b/deployment/heat/onap-oom/env/huawei/onap-beijing-oom.env
@@ -1,33 +1,16 @@
 parameters:
 
-  keystone_url: http://10.145.122.117:5000
-  openstack_tenant_id: 3d228d2fcbb7447bbba3cde703431bc1
-  openstack_tenant_name: onap-beijing-oom
-  openstack_username: demo
-  openstack_api_key: demo
-
   ubuntu_1404_image: trusty
   ubuntu_1604_image: xenial
-  centos_7_image: centos7
 
+  lab_name: huawei
   apt_proxy: 10.145.122.118:3142
   docker_proxy: 10.145.122.118:5000
 
-  rancher_vm_flavor: m1.large
-  k8s_vm_flavor: m2.xxlarge
+  rancher_vm_flavor: m1.xlarge
+  k8s_vm_flavor: m1.xlarge
 
   public_net_id: 3a6247f1-fac6-4167-a49f-33cc8415ccf4
   public_net_name: provider
 
   oam_network_cidr: 172.16.0.0/16
-  dns_forwarder: 10.145.122.117
-  external_dns: 10.145.122.118
-
-  dnsaas_proxy_enable: "false"
-  dnsaas_proxied_keystone_url_path: "v2.0"
-  dnsaas_keystone_url: http://10.145.122.117:5000
-  dnsaas_region: RegionOne
-  dnsaas_tenant_id: 3d228d2fcbb7447bbba3cde703431bc1
-  dnsaas_tenant_name: onap-beijing-oom
-  dnsaas_username: demo
-  dnsaas_password: demo
