--- a/deployment/heat/onap-oom/env/windriver/Integration-SB-01.env
+++ b/deployment/heat/onap-oom/env/windriver/Integration-SB-01.env
@@ -1,34 +1,16 @@
 parameters:
 
-  keystone_url: http://10.12.25.2:5000
-  openstack_tenant_id: 087050388b204c73a3e418dd2c1fe30b
-  openstack_tenant_name: Integration-SB-01
-  openstack_username: demo
-  openstack_api_key: onapdemo
-
   ubuntu_1404_image: ubuntu-14-04-cloud-amd64
   ubuntu_1604_image: ubuntu-16-04-cloud-amd64
-  centos_7_image: CentOS-7
 
   lab_name: windriver
   apt_proxy: 10.12.5.2:3142
   docker_proxy: 10.12.5.2:5000
 
-  rancher_vm_flavor: m1.large
-  k8s_vm_flavor: m2.xxlarge
+  rancher_vm_flavor: m1.xlarge
+  k8s_vm_flavor: m1.xlarge
 
   public_net_id: 971040b2-7059-49dc-b220-4fab50cb2ad4
   public_net_name: external
 
   oam_network_cidr: 10.0.0.0/16
-  dns_forwarder: 10.12.25.5
-  external_dns: 8.8.8.8
-
-  dnsaas_proxy_enable: "true"
-  dnsaas_proxied_keystone_url_path: "api/multicloud-titanium_cloud/v0/pod25_RegionOne/identity/v2.0"
-  dnsaas_keystone_url: http://10.12.25.5:5000
-  dnsaas_region: RegionOne
-  dnsaas_tenant_id: 4318a6c5788449cc97c88fd745b554b9
-  dnsaas_tenant_name: Integration-SB-01
-  dnsaas_username: demo
-  dnsaas_password: onapdemo
