Pass integration-override directly in env file
Change-Id: I5fddab2211fcaa1edbc91662222801499c610cfb
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/huawei/onap-beijing-oom.env
+++ b/deployment/heat/onap-oom/env/huawei/onap-beijing-oom.env
@@ -1,9 +1,7 @@
 parameters:
 
-  ubuntu_1404_image: trusty
   ubuntu_1604_image: xenial
 
-  lab_name: huawei
   apt_proxy: 10.145.122.118:3142
   docker_proxy: 10.145.122.118:5000
 
@@ -11,6 +9,27 @@ parameters:
   k8s_vm_flavor: m1.xlarge
 
   public_net_id: 3a6247f1-fac6-4167-a49f-33cc8415ccf4
-  public_net_name: provider
 
   oam_network_cidr: 172.16.0.0/16
+
+  integration_override_yaml: >
+    global:
+      repository: 10.145.122.118:5000
+      pullPolicy: IfNotPresent
+      robot:
+        openStackKeyStoneUrl: "http://10.145.122.117:5000"
+        openStackPublicNetId: "3a6247f1-fac6-4167-a49f-33cc8415ccf4"
+        openStackPassword: "${OS_PASSWORD}"
+        openStackTenantId: "${OS_PROJECT_ID}"
+        openStackUserName: "${OS_USERNAME}"
+        ubuntu14Image: "trusty"
+        ubuntu16Image: "xenial"
+        openStackPrivateNetId: "__oam_network_id__"
+        openStackPrivateSubnetId: "__oam_subnet_id__"
+        openStackPrivateNetCidr: "172.16.0.0/16"
+        openStackOamNetworkCidrPrefix: "172.16"
+      so:
+        config:
+          openStackUserName: "${OS_USERNAME}"
+          openStackKeyStoneUrl: "http://10.145.122.117:5000"
+          openStackEncryptedPasswordHere: "0916381cbde09701d30882598b765350"
