Pass integration-override directly in env file
Change-Id: I5fddab2211fcaa1edbc91662222801499c610cfb
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/windriver/Integration-SB-02.env
+++ b/deployment/heat/onap-oom/env/windriver/Integration-SB-02.env
@@ -1,9 +1,7 @@
 parameters:
 
-  ubuntu_1404_image: ubuntu-14-04-cloud-amd64
   ubuntu_1604_image: ubuntu-16-04-cloud-amd64
 
-  lab_name: windriver
   apt_proxy: 10.12.5.2:3142
   docker_proxy: 10.12.5.2:5000
 
@@ -11,6 +9,27 @@ parameters:
   k8s_vm_flavor: m1.xlarge
 
   public_net_id: 971040b2-7059-49dc-b220-4fab50cb2ad4
-  public_net_name: external
 
-  oam_network_cidr: 172.16.0.0/16
+  oam_network_cidr: 10.0.0.0/16
+
+  integration_override_yaml: >
+    global:
+      repository: 10.12.5.2:5000
+      pullPolicy: IfNotPresent
+      robot:
+        openStackKeyStoneUrl: "http://10.12.25.2:5000"
+        openStackPublicNetId: "971040b2-7059-49dc-b220-4fab50cb2ad4"
+        openStackPassword: "${OS_PASSWORD}"
+        openStackTenantId: "${OS_PROJECT_ID}"
+        openStackUserName: "${OS_USERNAME}"
+        ubuntu14Image: "ubuntu-14-04-cloud-amd64"
+        ubuntu16Image: "ubuntu-16-04-cloud-amd64"
+        openStackPrivateNetId: "__oam_network_id__"
+        openStackPrivateSubnetId: "__oam_subnet_id__"
+        openStackPrivateNetCidr: "10.0.0.0/16"
+        openStackOamNetworkCidrPrefix: "10.0"
+      so:
+        config:
+          openStackUserName: "${OS_USERNAME}"
+          openStackKeyStoneUrl: "http://10.12.25.2:5000"
+          openStackEncryptedPasswordHere: "${OS_PASSWORD_ENCRYPTED}"
