--- a/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
@@ -1,9 +1,7 @@
 parameters:
 
-  ubuntu_1404_image: "Ubuntu 14.04 LTS Generic"
   ubuntu_1604_image: "Ubuntu 16.04 LTS Generic"
 
-  lab_name: tlab
   apt_proxy: 192.168.31.204:3142
   docker_proxy: 192.168.31.204:5000
 
@@ -11,6 +9,27 @@ parameters:
   k8s_vm_flavor: m1.xlarge
 
   public_net_id: fbe8fd92-6636-4e63-ab28-bb6a5b0888a9
-  public_net_name: admin-vpn-floating
 
   oam_network_cidr: 10.0.0.0/16
+
+  integration_override_yaml: >
+    global:
+      repository: 192.168.31.204:5000
+      pullPolicy: IfNotPresent
+      robot:
+        openStackKeyStoneUrl: "https://bdc1tlab01.research.att.com:5000"
+        openStackPublicNetId: "fbe8fd92-6636-4e63-ab28-bb6a5b0888a9"
+        openStackPassword: "${OS_PASSWORD}"
+        openStackTenantId: "${OS_PROJECT_ID}"
+        openStackUserName: "${OS_USERNAME}"
+        ubuntu14Image: "Ubuntu 14.04 LTS Generic"
+        ubuntu16Image: "Ubuntu 16.04 LTS Generic"
+        openStackPrivateNetId: "__oam_network_id__"
+        openStackPrivateSubnetId: "__oam_subnet_id__"
+        openStackPrivateNetCidr: "10.0.0.0/16"
+        openStackOamNetworkCidrPrefix: "10.0"
+      so:
+        config:
+          openStackUserName: "${OS_USERNAME}"
+          openStackKeyStoneUrl: "https://bdc1tlab01.research.att.com:5000"
+          openStackEncryptedPasswordHere: "${OS_PASSWORD_ENCRYPTED}"
