--- a/test/ete/labs/tlab/onap-openstack-template.env
+++ b/test/ete/labs/tlab/onap-openstack-template.env
@@ -92,6 +92,7 @@ parameters:
   music_ip_addr: 10.0.15.1
   oof_ip_addr: 10.0.16.1
   aaf_ip_addr: 10.0.13.1
+  sms_ip_addr: 10.0.13.2
   nbi_ip_addr: 10.0.17.1
 
   ###########################
