--- a/version-manifest/pom.xml
+++ b/version-manifest/pom.xml
@@ -121,6 +121,19 @@
               </arguments>
             </configuration>
           </execution>
+          <execution>
+            <id>check-docker-images-exist</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <arguments>
+                <argument>${project.basedir}/src/main/scripts/check-docker-manifest.sh</argument>
+                <argument>${project.basedir}/src/main/resources/docker-manifest.csv</argument>
+              </arguments>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
     </plugins>
