Update lab env config
Change-Id: Ic33a1cc5c223ccbc565a7d4725f30d1db7d11dfe
Issue-ID: INT-278
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/test/ete/labs/gwu/onap-openstack-template.env
+++ b/test/ete/labs/gwu/onap-openstack-template.env
@@ -40,7 +40,7 @@ parameters:
 
   dmaap_topic: AUTO
 
-  artifacts_version: 1.1.1
+  artifacts_version: 1.2.0-SNAPSHOT
 
   openstack_tenant_id: ${OS_PROJECT_ID}
 
@@ -89,6 +89,11 @@ parameters:
   vid_ip_addr: 172.16.8.1
   clamp_ip_addr: 172.16.12.1
   openo_ip_addr: 172.16.14.1
+  music_ip_addr: 172.16.15.1
+  oof_ip_addr: 172.16.16.1
+  aaf_ip_addr: 172.16.13.1
+  sms_ip_addr: 172.16.13.2
+  nbi_ip_addr: 172.16.17.1
 
   ###########################
   #                         #
@@ -96,6 +101,7 @@ parameters:
   #                         #
   ###########################
 
+  dcae_deployment_profile: R2MVP
   dnsaas_config_enabled: false
   dnsaas_region: RegionOne
   dnsaas_keystone_url: http://192.168.1.11:5000/v3
