Change default pullPolicy to Always
Change-Id: I46e8bc9cbd46a42de34ccea82d29d7f95ed00b3d
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/tlab/ETE-HEAT-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-HEAT-Test.env
@@ -15,7 +15,7 @@ parameters:
   integration_override_yaml: >
     global:
       repository: 192.168.31.204:5000
-      pullPolicy: IfNotPresent
+      pullPolicy: Always
     robot:
       openStackKeyStoneUrl: "https://bdc1tlab01.research.att.com:5000"
       openStackPublicNetId: "fbe8fd92-6636-4e63-ab28-bb6a5b0888a9"
