--- a/deployment/heat/onap-oom/env/tlab/EXTONAP_DEV.env
+++ b/deployment/heat/onap-oom/env/tlab/EXTONAP_DEV.env
@@ -15,7 +15,7 @@ parameters:
   integration_override_yaml: >
     global:
       repository: 192.168.31.204:5000
-      pullPolicy: IfNotPresent
+      pullPolicy: Always
     robot:
       openStackKeyStoneUrl: "https://bdc1tlab01.research.att.com:5000"
       openStackPublicNetId: "fbe8fd92-6636-4e63-ab28-bb6a5b0888a9"
