Temporarily change openstack-ocata image to latest
Change-Id: Ibb7892ed1f2d0c5588ce7cce042468856ca72a06
Issue-ID: INT-500
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/gwu/onap.env
+++ b/deployment/heat/onap-oom/env/gwu/onap.env
@@ -35,3 +35,18 @@ parameters:
         openStackUserName: "${OS_USERNAME}"
         openStackKeyStoneUrl: "http://192.168.1.11:5000"
         openStackEncryptedPasswordHere: "${OS_PASSWORD_ENCRYPTED}"
+    portal:
+      portal-mariadb:
+        liveness:
+          initialDelaySeconds: 600
+        readiness:
+          initialDelaySeconds: 600
+    policy:
+      drools:
+        nexus:
+          liveness:
+            initialDelaySeconds: 300
+    dmaap:
+      dmaap-bus-controller:
+        liveness:
+          initialDelaySeconds: 600
