Use OAM network for Robot public_net in TLAB OOM
Change-Id: Ic4c9a90e275309a72c0b23bfb7d55cc04278ccc7
Issue-ID: INT-414
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/tlab/ETE-HEAT-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-HEAT-Test.env
@@ -18,7 +18,7 @@ parameters:
       pullPolicy: Always
     robot:
       openStackKeyStoneUrl: "https://bdc1tlab01.research.att.com:5000"
-      openStackPublicNetId: "fbe8fd92-6636-4e63-ab28-bb6a5b0888a9"
+      openStackPublicNetId: "__oam_network_id__"
       openStackPassword: "${OS_PASSWORD}"
       openStackTenantId: "${OS_PROJECT_ID}"
       openStackUserName: "${OS_USERNAME}"
