--- a/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
@@ -18,7 +18,7 @@ parameters:
       pullPolicy: Always
     robot:
       openStackKeyStoneUrl: "https://bdc1tlab01.research.att.com:5000"
-      openStackPublicNetId: "fbe8fd92-6636-4e63-ab28-bb6a5b0888a9"
+      openStackPublicNetId: "__oam_network_id__"
       openStackPassword: "${OS_PASSWORD}"
       openStackTenantId: "${OS_PROJECT_ID}"
       openStackUserName: "${OS_USERNAME}"
