--- a/test/ete/labs/tlab/onap-openstack-template.env
+++ b/test/ete/labs/tlab/onap-openstack-template.env
@@ -71,6 +71,7 @@ parameters:
   external_dns: 8.8.8.8
   dns_forwarder: 204.178.3.230
   oam_network_cidr: 10.0.0.0/16
+  use_oam_net_for_robot: true
 
   ### Private IP addresses ###
 
