Use OAM network for Robot public_net in TLAB HEAT
Change-Id: Ic4c9a90e275309a72c0b23bfb7d55cc04278ccc7
Issue-ID: INT-414
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/test/ete/labs/gwu/onap-openstack-template.env
+++ b/test/ete/labs/gwu/onap-openstack-template.env
@@ -71,6 +71,7 @@ parameters:
   external_dns: 192.168.1.3
   dns_forwarder: 192.168.1.11
   oam_network_cidr: 172.16.0.0/16
+  use_oam_net_for_robot: true
 
   ### Private IP addresses ###
 
